# RAGnTeX

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  ragntex.py
.github/workflows/: ci.yml  docker.yml  hf_sync.yml  main.yml
docs/: conf.py  index.rst  src.compilation.rst  src.database.rst  src.interface.rst  src.services.rst  src.telemetry.rst
docs/source/: modules.rst  ragntex.rst  src.processing.rst  src.rst
src/: __init__.py  database.py  document_processing.py  generator.py  google_client.py
src/compilation/: __init__.py  json_to_tex.py  latex_compilation.py  latex_tools.py
src/database/: __init__.py  database.py  db_manipulation.py  ingest.py  retrieve.py
src/interface/: __init__.py  download_files.py  gradio_interface.py  manage_files.py  session_manager.py  upload_files.py
src/processing/: __init__.py  document_processing.py  images_processing.py  output_folder.py  prompt.py
src/services/: __init__.py  generator.py  google_client.py  output_schema.py  prompt.py
src/telemetry/: __init__.py  logging_utils.py  telemetry.py
src/utils/: __init__.py  gradio_user_settings.py  logging_utils.py  upload_files.py
