[tool.poetry]
name = "ragntex"
version = "1.0.0"
description = "From Text to Visuals: Auto-Generating LaTeX Beamer Presentations with GenAI"
authors = ["AnnaErsh <aershova096@gmail.com>", "KNiewczas <kajetan.niewczas@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
google-genai = "1.11.0"
chromadb = "1.0.5"
dotenv = ">=0.9.9,<0.10.0"
google-api-core = ">=2.24.2,<3.0.0"
google-api-python-client = ">=2.168.0,<3.0.0"
google = ">=3.0.0,<4.0.0"
rtree = ">=1.4.0,<2.0.0"
pymupdf = ">=1.25.5,<2.0.0"
gradio = ">=5.27.1,<6.0.0"
langfuse = ">=2.60.5,<3.0.0"
pydantic = ">=2.6.0,<2.10.0"
rsa = ">=4.7,<5.0"
gradio-pdf = ">=0.0.22,<0.0.23"
latexcodec = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
black = "^25.1.0"
pytest = "^8.4.0"
mypy = "^1.16.0"
isort = "^6.0.1"
safety = "^3.5.2"
bandit = "^1.8.3"

[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "1.22"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
